Adjusted code for java 8